updated java version, gradle wrapper and dependencies (and gitignore)